feat: AI implement v2.0 user auth, favorites and application records
Add Magic Link email authentication with Redis, favorites with deadline
highlighting, application record tracking with status workflow, and
dual-JWT system for admin and user roles. Frontend adds LoginModal,
UserMenu, Favorites page, Applications page, and card-level favorite/
apply toggles. Remove MobileGuard, add /favorites and /applications
routes.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>